--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ astroid==2.6.2
 asttokens==2.0.5
 backports.entry-points-selectable==1.1.0
 black==21.7b0
+boto==2.49.0
 certifi==2021.10.8
 cffi==1.15.0
 cfgv==3.3.0
 charset-normalizer==2.0.8
 click==8.0.1
 colorama==0.4.4
+colorlog==6.7.0
 commonmark==0.9.1
 cryptography==37.0.2
 defusedxml==0.7.1
@@ -25,6 +27,7 @@ django-debug-toolbar==3.2.2
 django-doctor==2.5.0
 django-environ==0.8.1
 django-heroku==0.3.1
+django-markwhat==1.6.2
 django-on-heroku==1.1.2
 django-sass==1.1.0
 django-sass-processor==1.2
@@ -38,8 +41,10 @@ icalendar==4.0.9
 identify==2.2.11
 idna==3.3
 isort==5.9.2
+keyring==5.7.1
 lazy-object-proxy==1.6.0
 libsass==0.21.0
+markdown2==2.4.6
 mccabe==0.6.1
 mypy-extensions==0.4.3
 nodeenv==1.6.0
@@ -75,7 +80,9 @@ skjold==0.3.2
 sqlparse==0.4.2
 toml==0.10.2
 tomli==1.0.4
+tornado==6.2
 urllib3==1.26.7
 virtualenv==20.7.0
+virtualenvwrapper.django==0.4.1
 whitenoise==5.3.0
 wrapt==1.12.1
